<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.corp.husni.uas_mc_14111068.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="330dp"
        android:layout_height="150dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138">

        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/tombol_encode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="11dp"
                android:background="@null"
                android:contentDescription="@string/encodetombol"
                app:srcCompat="@drawable/ic_compare_arrows_black_18dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:id="@+id/tombol_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tombol_encode"
                android:layout_marginEnd="11dp"
                android:layout_toStartOf="@+id/tombol_encode"
                android:background="@null"
                android:contentDescription="@string/tongsampah"
                app:srcCompat="@drawable/ic_delete_black_18dp" />

            <RelativeLayout
                android:id="@+id/relative_teks_biasa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="9sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_above="@+id/tombol_encode">

                <EditText
                    android:id="@+id/teks_biasa_isi"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/isi_teks_yang_mau_diterjemahkan"
                    android:inputType="textMultiLine|textPersonName"
                    android:textSize="16sp"
                    android:layout_alignParentBottom="true"
                    android:gravity="top|left"/>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teks_biasa"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teks_morse"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <android.support.v7.widget.CardView
        android:layout_width="330dp"
        android:layout_height="150dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706">

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/tombol_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="11dp"
                android:background="@null"
                android:contentDescription="@string/bagi"
                app:srcCompat="@drawable/ic_share_black_18dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:id="@+id/tombol_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tombol_share"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="22dp"
                android:layout_toStartOf="@+id/tombol_share"
                android:background="@null"
                android:contentDescription="@string/kopi"
                app:srcCompat="@drawable/ic_content_copy_black_18dp"
                tools:ignore="RtlHardcoded" />

            <RelativeLayout
                android:id="@+id/relative_teks_morse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/tombol_share"
                android:padding="9sp">

                <TextView
                    android:id="@+id/teks_morse_hasil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hasil_text_morse"
                    android:textSize="16sp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true" />
            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
